# api.yml
@@ -7,29 +7,6 @@ info:
 servers:
   - url: http://localhost
 paths:
-  /hello:
-    get:
-      summary: This is just a test endpoint to get you started. Please delete this endpoint.
-      operationId: hello
-      parameters:
-        - name: id
-          in: query
-          required: true
-          schema:
-            type: integer
-      responses:
-        '200':
-          description: Test return
-          content:
-            application/json:    
-              schema:
-                $ref: "#/components/schemas/HelloResponse"
-        '404':
-          description: Not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorResponse"
   /register:
     post: 
       summary: Register new user 
@@ -47,6 +24,10 @@ paths:
                   type: string
                 password:
                   type: string
+              required: 
+                - phone
+                - name
+                - password
       responses:
         '200':
           description: Successfully created new user
@@ -75,6 +56,9 @@ paths:
                   type: string
                 password:
                   type: string
+              required:
+                - phone
+                - password 
       responses:
         '200':
           description: Login success
@@ -88,7 +72,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
-  /profile:
+  /user/profile:
     get: 
       summary: Get user profile
       operationId: getProfile
@@ -117,7 +101,7 @@ paths:
               properties:
                 phone:
                   type: string
-                password:
+                name:
                   type: string
       responses:
         '200':
