# model/user.go
@@ -1,0 +1,8 @@
+package model
+
+type User struct {
+	ID       string
+	Name     string
+	Phone    string
+	Password string
+}
